add JVM startup parameters